# ppsim-rust

./: .gitignore  .json  .readthedocs.yaml  Cargo.toml  MANIFEST.in  README.md  README_RUG_SETUP.md  README_RUG_WINDOWS.md  bugs-cython.txt  build_msys2.bat  build_msys2.ps1  crn.ipynb  gamma.ipynb  gamma.py  gammas.txt  github-actions-windows-rug-draft.yml  mpmath_ln_gamma.py  out.txt  out1.txt  ppsim_rust.pyi  profile.out  pyproject.toml  regression.ipynb  running_time_data_compute_mean.json  running_time_data_compute_var.json  running_time_data_sampling.json
.cargo/: config.toml  config.toml.bak
data/: dimer_D-counts_time0.0005_n1e2_trials1e2_rebop.json  dimer_D-counts_time0.0005_n1e2_trials1e5_ppsim.json  dimer_D-counts_time0.0005_n1e2_trials1e5_rebop.json  dimer_D-counts_time0.0005_n1e4_trials1e4_ppsim.json  dimer_D-counts_time0.0005_n1e4_trials1e4_rebop.json  dimer_D-counts_time0.005_n1e2_trials1e2_ppsim.json  dimer_D-counts_time0.005_n1e2_trials1e2_rebop.json  dimer_D-counts_time0.005_n1e2_trials1e3_ppsim.json  dimer_D-counts_time0.005_n1e2_trials1e3_rebop.json  dimer_D-counts_time0.005_n1e2_trials1e4_ppsim.json  dimer_D-counts_time0.005_n1e2_trials1e4_rebop.json  dimer_D-counts_time0.005_n1e2_trials1e5_ppsim.json  dimer_D-counts_time0.005_n1e2_trials1e5_rebop.json  dimer_D-counts_time0.05_n1e2_trials1e4_ppsim.json  dimer_D-counts_time0.05_n1e2_trials1e4_rebop.json  dimer_D-counts_time0.5_n1e2_trials1e2_rebop.json  dimer_D-counts_time0.5_n1e2_trials1e4_ppsim.json  dimer_D-counts_time0.5_n1e2_trials1e5_ppsim.json  dimer_D-counts_time0.5_n1e2_trials1e5_rebop.json  (+42 more)
(+45 files in other folders)
